; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/graphics/extr_vec4.c_vec4_from_vec3.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/graphics/extr_vec4.c_vec4_from_vec3.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vec4 = type { float, i32 }
%struct.vec3 = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @vec4_from_vec3(%struct.vec4* %0, %struct.vec3* %1) #0 {
  %3 = alloca %struct.vec4*, align 8
  %4 = alloca %struct.vec3*, align 8
  store %struct.vec4* %0, %struct.vec4** %3, align 8
  store %struct.vec3* %1, %struct.vec3** %4, align 8
  %5 = load %struct.vec3*, %struct.vec3** %4, align 8
  %6 = getelementptr inbounds %struct.vec3, %struct.vec3* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = load %struct.vec4*, %struct.vec4** %3, align 8
  %9 = getelementptr inbounds %struct.vec4, %struct.vec4* %8, i32 0, i32 1
  store i32 %7, i32* %9, align 4
  %10 = load %struct.vec4*, %struct.vec4** %3, align 8
  %11 = getelementptr inbounds %struct.vec4, %struct.vec4* %10, i32 0, i32 0
  store float 1.000000e+00, float* %11, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
